--- a/app/views/task_lists/show.html.erb
+++ b/app/views/task_lists/show.html.erb
@@ -1,10 +1,24 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @task_list %>
+<h1><%= @task_list.name %></h1>
 
-<div>
-  <%= link_to "Edit this task list", edit_task_list_path(@task_list) %> |
-  <%= link_to "Back to task lists", task_lists_path %>
+<h2>Tasks</h2>
+<ul>
+  <% @task_list.tasks.each do |task| %>
+    <%= render 'tasks/edit_task', task: task, task_list: @task_list %>
+  <% end %>
+</ul>
 
-  <%= button_to "Destroy this task list", @task_list, method: :delete %>
-</div>
+<h3>Adicionar nova task</h3>
+<%= render 'tasks/new_task', task: Task.new, task_list: @task_list %>
+
+<script>
+  document.querySelectorAll('.task-form').forEach(form => {
+    const input = form.querySelector('input[type="text"]');
+    const btn = form.querySelector('.save-btn');
+
+    input.addEventListener('input', () => {
+      btn.style.display = (input.value !== input.dataset.original) ? 'inline-block' : 'none';
+    });
+  });
+</script>
