login and signup ux / ui

--- a/app/views/layouts/_header_logged_out.html.erb
+++ b/app/views/layouts/_header_logged_out.html.erb
@@ -1,3 +1,5 @@
-<header class="navbar shadow-sm justify-center">
-  <%= image_tag "logo.webp", alt: "Logo Save Puffendale", class: "logo", width: 200, height: 70 %>
+<header class="navbar justify-center">
+  <%= link_to home_path do %>
+    <%= image_tag "logo.webp", alt: "Logo Save Puffendale", class: "logo cursor-pointer", width: 200, height: 70 %>
+  <% end %>
 </header>
