--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,4 +1,4 @@
-<div class="hero min-h-[90vh] bg-base-200">
+<div class="hero min-h-[90vh]">
   <div class="hero-content text-center">
     <div class="max-w-xl space-y-6">
       <h1 class="text-4xl font-bold">Olá aventureiro(a)!</h1>
