--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-  
+  <body class="bg-base-200 min-h-screen">
+
     <% if logged_in? %>
       <%= render "layouts/header_logged_in" %>
     <% else %>
