--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -12,7 +12,7 @@
       </p>
       
       <p class="text-base-content">
-        Nesse To do List, cada tarefa ajuda a salvar o vilarejo, enfraquecendo o feitiço da bruxa. Complete tarefas, recupere a magia e devolva a vida a Puffendale!
+        Nesse <span class="font-bold">To do List</span>, cada tarefa ajuda a salvar o vilarejo, enfraquecendo o feitiço da bruxa. Complete tarefas, recupere a magia e devolva a vida a Puffendale!
       </p>
       
       <div class="flex justify-center gap-4">
