--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<div class="flex items-center justify-center min-h-screen bg-base-200">
-  <div class="card w-full max-w-md shadow-lg bg-base-100">
+<div class="flex items-center justify-center min-h-[90vh]">
+  <div class="card w-full max-w-md shadow-lg bg-base-100 m-4">
     <div class="card-body">
       <h1 class="text-2xl font-bold text-center mb-6">Criar Conta</h1>
 
