--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto my-6 p-4">
+<div class="container mx-auto my-6 p-4 min-h-[90vh]">
 
   <div class="text-center">
     <h1 class="text-2xl font-bold mb-2">Bem-vindo, <%= current_user.name %>!</h1>
