--- a/app/views/task_lists/show.html.erb
+++ b/app/views/task_lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto my-4 p-4">
+<div class="container mx-auto my-4 p-4 min-h-[90vh]">
 
   <div class="flex justify-between items-center gap-2 mb-4">
     <span id="tasklist-name-display" class="text-2xl font-bold"><%= @task_list.name %></span>
