--- a/app/views/village/index.html.erb
+++ b/app/views/village/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto my-6 p-4">
+<div class="container mx-auto my-6 p-4 min-h-[90vh]">
 
   <h1 class="text-2xl font-bold text-center mb-0">Status do Vilarejo:</h1>
 
