--- a/app/views/tasks/_edit_task.html.erb
+++ b/app/views/tasks/_edit_task.html.erb
@@ -6,7 +6,7 @@
     </label>
 
     <%= f.text_field :name, value: task.name, 
-      placeholder: "Task name",
+      placeholder: "Nome",
       class: "input input-ghost flex-1 ml-2",
       data: { original: task.name } 
     %>
