--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,22 +5,22 @@
 
       <%= form_with model: @user, url: signup_path, local: true do |f| %>
         <div class="form-control mb-4">
-          <%= f.label :name, class: "label" %>
+          <%= f.label :name, "Nome", class: "label font-semibold" %>
           <%= f.text_field :name, class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mb-4">
-          <%= f.label :email, class: "label" %>
+          <%= f.label :email, "E-mail", class: "label font-semibold" %>
           <%= f.email_field :email, class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mb-4">
-          <%= f.label :password, class: "label" %>
+          <%= f.label :password, "Senha", class: "label font-semibold" %>
           <%= f.password_field :password, class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mb-4">
-          <%= f.label :password_confirmation, class: "label" %>
+          <%= f.label :password_confirmation, "Confirmar Senha", class: "label font-semibold" %>
           <%= f.password_field :password_confirmation, class: "input input-bordered w-full" %>
         </div>
 
