--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -16,8 +16,8 @@
       </p>
       
       <div class="flex justify-center gap-4">
-        <%= link_to "Entrar", login_path, class: "btn btn-primary btn-lg" %>
-        <%= link_to "Criar Conta", signup_path, class: "btn btn-secondary btn-lg" %>
+        <%= link_to "Entrar", new_user_session_path, class: "btn btn-primary btn-lg" %>
+        <%= link_to "Criar Conta", new_user_registration_path, class: "btn btn-secondary btn-lg" %>
       </div>
     </div>
   </div>
