--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,41 @@
-<h2>Forgot your password?</h2>
+<div class="flex items-center justify-center min-h-[90vh]">
+  <div class="card w-full max-w-md shadow-lg bg-base-100 m-4">
+    <div class="card-body">
+      <h1 class="text-2xl font-bold text-center mb-6">
+        Esqueceu sua senha?
+      </h1>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <p class="text-center text-sm mb-6 text-base-content/70">
+        Informe seu e-mail e enviaremos instruções para redefinir sua senha.
+      </p>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= form_for(resource,
+            as: resource_name,
+            url: password_path(resource_name),
+            html: { method: :post }) do |f| %>
+
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="form-control mb-4">
+          <%= f.label :email, "E-mail", class: "label font-semibold" %>
+          <%= f.email_field :email,
+                autofocus: true,
+                autocomplete: "email",
+                class: "input input-bordered w-full" %>
+        </div>
+
+        <div class="form-control mt-6">
+          <%= f.submit "Enviar instruções",
+                class: "btn btn-primary w-full" %>
+        </div>
+      <% end %>
+
+      <p class="text-center mt-4">
+        Lembrou da senha?
+        <%= link_to "Entrar",
+              new_user_session_path,
+              class: "link link-primary font-bold" %>
+      </p>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
