--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,10 +9,15 @@
         Informe seu e-mail e enviaremos instruções para redefinir sua senha.
       </p>
 
-      <%= form_for(resource,
-            as: resource_name,
-            url: password_path(resource_name),
-            html: { method: :post }) do |f| %>
+      <%= form_for(
+          resource,
+          as: resource_name,
+          url: password_path(resource_name),
+          html: {
+            method: :post,
+            data: { turbo: false }
+          }
+        ) do |f| %>
 
         <%= render "devise/shared/error_messages", resource: resource %>
 
